left text align & fix map z-index

--- a/src/app/pages/about-us/about-us.component.scss
+++ b/src/app/pages/about-us/about-us.component.scss
@@ -1,1 +1,5 @@
 @import "../../core/styles/variables.scss";
+
+.description {
+    margin-bottom: 1rem;
+}
