--- a/src/app/pages/map/map.component.scss
+++ b/src/app/pages/map/map.component.scss
@@ -7,6 +7,7 @@
 
 #map {
     height: 100%;
+    z-index: 0;
 }
 
 @media (max-width: $bp-small-devices) {
