--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,7 +26,6 @@ body {
     margin: 0;
     position: relative;
     font-family: "Libre Caslon Text", serif;
-    text-align: justify;
 }
 
 ::-webkit-input-placeholder,
